# interactive-feedback-mcp

./: CMakeLists.txt  README.md  README_zh.md  mcp.json  server.cpp
mac/: .gitignore  README.md  pyproject.toml
mac/src/interactive_feedback_mcp/: __init__.py  autoreply.py  cli.py  logging_utils.py  models.py  paths.py  server.py  ui.py
mac/tests/: test_autoreply.py
